[project]
name = "linkedinposts"
version = "0.1.0"
description = "linkedinPosts using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
linkedinposts = "linkedinposts.main:run"
run_crew = "linkedinposts.main:run"
train = "linkedinposts.main:train"
replay = "linkedinposts.main:replay"
test = "linkedinposts.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
